--- a/isthisstockgood/templates/footer.html
+++ b/isthisstockgood/templates/footer.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <footer class="row justify-content-center" id="footer">
+  <footer class="row justify-content-center" id="footer" role="contentinfo">
     <p>&copy; 2018-{{current_year}}.</p>
   </footer>
 </div>
