--- a/isthisstockgood/templates/margin_of_safety.html
+++ b/isthisstockgood/templates/margin_of_safety.html
@@ -10,46 +10,57 @@
   </div>
   <div class="row pt-3 justify-content-center">
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr id="margin_of_safety_title_label">
-            <th>Sticker Price</th>
-          </tr>
-        </thead>
-        <tr id="margin_of_safety_prices">
-          <td id="sticker_price">
-            -
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr id="margin_of_safety_title_label">
-            <th>Margin of Safety price</th>
-          </tr>
-        </thead>
-        <tr id="margin_of_safety_prices">
-          <td id="margin_of_safety_price">
-            -
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div class="col">
-      <table class="table table-bordered text-center">
-        <tr id="current_price_title_label">
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Sticker price estimation</caption>
           <thead class="thead-light">
-            <th>Current Price</th>
+            <tr id="margin_of_safety_title_label">
+              <th scope="col">Sticker Price</th>
+            </tr>
           </thead>
-          <td id="current_price">
-            -
-          </td>
-        </tr>
-      </table>
+          <tbody>
+            <tr id="margin_of_safety_prices">
+              <td id="sticker_price">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Margin of safety valuation</caption>
+          <thead class="thead-light">
+            <tr id="margin_of_safety_price_title_label">
+              <th scope="col">Margin of Safety price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="margin_of_safety_price_row">
+              <td id="margin_of_safety_price">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Current market price</caption>
+          <thead class="thead-light">
+            <tr id="current_price_title_label">
+              <th scope="col">Current Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="current_price_row">
+              <td id="current_price">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
