--- a/isthisstockgood/templates/meaning.html
+++ b/isthisstockgood/templates/meaning.html
@@ -8,5 +8,5 @@
         data-content="{% include 'txt/meaning_tooltip.txt' %}"
     >Meaning</button>
   </div>
-  <div id="meaning"></div>
+  <div id="meaning" role="region" aria-live="polite"></div>
 </div>
