--- a/isthisstockgood/templates/payback_time.html
+++ b/isthisstockgood/templates/payback_time.html
@@ -9,17 +9,23 @@
     >Payback Time</button>
   </div>
 
-    <div class="row pt-3 justify-content-center">
-    <div class="col-sm-5">
-      <table class="table table-bordered text-center">
-        <tr id="debt_equity_title_label">
+  <div class="row pt-3 justify-content-center">
+    <div class="col-sm-6 col-lg-4">
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Payback time results</caption>
           <thead class="thead-light">
-            <th>Payback Time (years)</th>
+            <tr id="debt_equity_title_label">
+              <th scope="col">Payback Time (years)</th>
+            </tr>
           </thead>
-          <td id="payback_time">
-            -
-          </td>
-        </tr>
-      </table>
+          <tbody>
+            <tr>
+              <td id="payback_time">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
