--- a/isthisstockgood/templates/ten_cap.html
+++ b/isthisstockgood/templates/ten_cap.html
@@ -9,17 +9,23 @@
     >10 Cap</button>
   </div>
 
-    <div class="row pt-3 justify-content-center">
-    <div class="col-sm-5">
-      <table class="table table-bordered text-center">
-        <tr id="debt_equity_title_label">
+  <div class="row pt-3 justify-content-center">
+    <div class="col-sm-6 col-lg-4">
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">10 cap price estimation</caption>
           <thead class="thead-light">
-            <th>10 Cap Price</th>
+            <tr id="ten_cap_title_label">
+              <th scope="col">10 Cap Price</th>
+            </tr>
           </thead>
-          <td id="ten_cap_price">
-            -
-          </td>
-        </tr>
-      </table>
+          <tbody>
+            <tr>
+              <td id="ten_cap_price">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
