--- a/isthisstockgood/templates/market_cap.html
+++ b/isthisstockgood/templates/market_cap.html
@@ -11,33 +11,39 @@
 
   <div class="row pt-3 justify-content-center">
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr id="average_volume_title_label">
-            <th>Average Volume</th>
-          </tr>
-        </thead>
-        <tr id="average_volume_value">
-          <td id="average_volume">
-            -
-          </td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Average trading volume</caption>
+          <thead class="thead-light">
+            <tr id="average_volume_title_label">
+              <th scope="col">Average Volume</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="average_volume_value">
+              <td id="average_volume">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr id="shares_to_hold_title_label">
-            <th>Max Shares to Hold</th>
-          </tr>
-        </thead>
-        <tr id="shares_to_hold_value">
-          <td id="shares_to_hold">
-            -
-          </td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Maximum number of shares to hold</caption>
+          <thead class="thead-light">
+            <tr id="shares_to_hold_title_label">
+              <th scope="col">Max Shares to Hold</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="shares_to_hold_value">
+              <td id="shares_to_hold">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
