--- a/isthisstockgood/templates/moat.html
+++ b/isthisstockgood/templates/moat.html
@@ -11,125 +11,140 @@
 
   <div class="row pt-3 justify-content-center">
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr>
-            <th colspan="4">ROIC (%)</th>
-          <tr>
-        </thead>
-
-        <tr>
-          <th id="roic_max">Max</th>
-          <th>5 year</th>
-          <th>3 year</th>
-          <th>1 year</th>
-        </tr>
-
-        <tr>
-          <td id="roic_max_val">-</td>
-          <td id="roic_5_val">-</td>
-          <td id="roic_3_val">-</td>
-          <td  id="roic_1_val">-</td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Return on invested capital growth rates</caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" colspan="4">ROIC (%)</th>
+            </tr>
+            <tr>
+              <th scope="col" id="roic_max">Max</th>
+              <th scope="col">5 year</th>
+              <th scope="col">3 year</th>
+              <th scope="col">1 year</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="roic_max_val">-</td>
+              <td id="roic_5_val">-</td>
+              <td id="roic_3_val">-</td>
+              <td id="roic_1_val">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr>
-            <th colspan="4">Equity/BVPS Growth Rate (%)</th>
-          <tr>
-        </thead>
-
-        <tr>
-          <th id="equity_max">Max</th>
-          <th>5 year</th>
-          <th>3 year</th>
-          <th>1 year</th>
-        </tr>
-
-        <tr>
-          <td id="equity_max_val">-</td>
-          <td id="equity_5_val">-</td>
-          <td id="equity_3_val">-</td>
-          <td id="equity_1_val">-</td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Equity and book value per share growth rates</caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" colspan="4">Equity/BVPS Growth Rate (%)</th>
+            </tr>
+            <tr>
+              <th scope="col" id="equity_max">Max</th>
+              <th scope="col">5 year</th>
+              <th scope="col">3 year</th>
+              <th scope="col">1 year</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="equity_max_val">-</td>
+              <td id="equity_5_val">-</td>
+              <td id="equity_3_val">-</td>
+              <td id="equity_1_val">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr>
-            <th colspan="4">EPS Growth Rate (%)</th>
-          <tr>
-        </thead>
-
-        <tr>
-          <th id="eps_max">Max</th>
-          <th>5 year</th>
-          <th>3 year</th>
-          <th>1 year</th>
-        </tr>
-
-        <tr>
-          <td id="eps_max_val">-</td>
-          <td id="eps_5_val">-</td>
-          <td id="eps_3_val">-</td>
-          <td id="eps_1_val">-</td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Earnings per share growth rates</caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" colspan="4">EPS Growth Rate (%)</th>
+            </tr>
+            <tr>
+              <th scope="col" id="eps_max">Max</th>
+              <th scope="col">5 year</th>
+              <th scope="col">3 year</th>
+              <th scope="col">1 year</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="eps_max_val">-</td>
+              <td id="eps_5_val">-</td>
+              <td id="eps_3_val">-</td>
+              <td id="eps_1_val">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
   <div class="row justify-content-center">
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr>
-            <th colspan="4">Sales/Revenue Growth Rate (%)</th>
-          <tr>
-        </thead>
-
-        <tr>
-          <th id="sales_max">Max</th>
-          <th>5 year</th>
-          <th>3 year</th>
-          <th>1 year</th>
-        </tr>
-
-        <tr>
-          <td id="sales_max_val">-</td>
-          <td id="sales_5_val">-</td>
-          <td id="sales_3_val">-</td>
-          <td id="sales_1_val">-</td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Sales and revenue growth rates</caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" colspan="4">Sales/Revenue Growth Rate (%)</th>
+            </tr>
+            <tr>
+              <th scope="col" id="sales_max">Max</th>
+              <th scope="col">5 year</th>
+              <th scope="col">3 year</th>
+              <th scope="col">1 year</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="sales_max_val">-</td>
+              <td id="sales_5_val">-</td>
+              <td id="sales_3_val">-</td>
+              <td id="sales_1_val">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="col">
-      <table class="table table-bordered text-center">
-        <thead class="thead-light">
-          <tr>
-            <th colspan="4">Free Cash Flow Growth Rate (%)</th>
-          <tr>
-        </thead>
-
-        <tr>
-          <th id="cash_max">Max</th>
-          <th>5 year</th>
-          <th>3 year</th>
-          <th>1 year</th>
-        </tr>
-
-        <tr>
-          <td id="cash_max_val">-</td>
-          <td id="cash_5_val">-</td>
-          <td id="cash_3_val">-</td>
-          <td id="cash_1_val">-</td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-bordered text-center">
+          <caption class="sr-only">Free cash flow growth rates</caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" colspan="4">Free Cash Flow Growth Rate (%)</th>
+            </tr>
+            <tr>
+              <th scope="col" id="cash_max">Max</th>
+              <th scope="col">5 year</th>
+              <th scope="col">3 year</th>
+              <th scope="col">1 year</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="cash_max_val">-</td>
+              <td id="cash_5_val">-</td>
+              <td id="cash_3_val">-</td>
+              <td id="cash_1_val">-</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
