--- a/isthisstockgood/templates/searchbox.html
+++ b/isthisstockgood/templates/searchbox.html
@@ -42,6 +42,4 @@
   </form>
 </section>
 
-<script>
-  {% include "js/search.js" %}
-</script>
+<script src="{{ url_for('static', filename='js/search.js') }}" defer></script>
