Fix ticker validation hyphen handling

--- a/isthisstockgood/templates/searchbox.html
+++ b/isthisstockgood/templates/searchbox.html
@@ -19,7 +19,7 @@
             maxlength="8"
             autocomplete="off"
             inputmode="latin"
-            pattern="^[A-Za-z]{1,5}(?:[.-][A-Za-z]{1,3})?$"
+            pattern="^[A-Za-z]{1,5}(?:[-.][A-Za-z]{1,3})?$"
             aria-describedby="ticker-help ticker-error"
             aria-required="true"
             required
