--- a/isthisstockgood/templates/footer.html
+++ b/isthisstockgood/templates/footer.html
@@ -1,16 +1,15 @@
 <div class="container mt-4" id="page-footer">
   <div class="row justify-content-center">
-    <h3>Disclaimer</h3>
+    <h3>{{ t.footer.disclaimer_heading }}</h3>
   </div>
 
   <div class="row justify-content-center">
     <p id="disclaimer_text" align="left">
       <i>
-        This site is intended for personal investing use and should be used at your own discretion. There are never any guarantees in investing, so please use your best judgement when researching
-        stocks to invest in. This site is simply one tool that may help you in your investment decisions. The calculations on this site are derived from the
-        <a target="_blank" href="https://www.amazon.com/gp/product/0307336840?pf_rd_p=c2945051-950f-485c-b4df-15aac5223b10&pf_rd_r=5QRSSH16W7Y0QSRVDSF1">Rule #1</a>
-        investing book by Phil Town. I highly recommend reading that book before interpreting any of the metrics calculated on this site. Also, for the sake of transparency, this entire site is open
-        source on GitHub. Feel free to dig into the code yourself if you have any questions regarding the exact calculations used.
+        {% set rule_one_link %}
+          <a target="_blank" href="https://www.amazon.com/gp/product/0307336840?pf_rd_p=c2945051-950f-485c-b4df-15aac5223b10&pf_rd_r=5QRSSH16W7Y0QSRVDSF1">{{ t.footer.disclaimer_link_text }}</a>
+        {% endset %}
+        {{ t.footer.disclaimer_text | format(rule_one_link=rule_one_link | trim) | safe }}
       </i>
     </p>
   </div>
