--- a/isthisstockgood/templates/meaning.html
+++ b/isthisstockgood/templates/meaning.html
@@ -4,9 +4,9 @@
         type="button"
         class="btn btn-raised btn-lg btn-primary"
         data-toggle="popover"
-        title="Meaning"
-        data-content="{% include 'txt/meaning_tooltip.txt' %}"
-    >Meaning</button>
+        title="{{ t.sections.meaning.title }}"
+        data-content="{{ t.sections.meaning.tooltip }}"
+    >{{ t.sections.meaning.title }}</button>
   </div>
   <div id="meaning" role="region" aria-live="polite"></div>
 </div>
