--- a/isthisstockgood/templates/payback_time.html
+++ b/isthisstockgood/templates/payback_time.html
@@ -4,19 +4,19 @@
         type="button"
         class="btn btn-raised btn-lg btn-primary"
         data-toggle="popover"
-        title="Payback Time"
-        data-content="{% include 'txt/payback_time_tooltip.txt' %}"
-    >Payback Time</button>
+        title="{{ t.sections.payback_time.title }}"
+        data-content="{{ t.sections.payback_time.tooltip }}"
+    >{{ t.sections.payback_time.title }}</button>
   </div>
 
   <div class="row pt-3 justify-content-center">
     <div class="col-sm-6 col-lg-4">
       <div class="table-responsive">
         <table class="table table-bordered text-center">
-          <caption class="sr-only">Payback time results</caption>
+          <caption class="sr-only">{{ t.sections.payback_time.tables.caption }}</caption>
           <thead class="thead-light">
             <tr id="debt_equity_title_label">
-              <th scope="col">Payback Time (years)</th>
+              <th scope="col">{{ t.sections.payback_time.tables.header }}</th>
             </tr>
           </thead>
           <tbody>
