--- a/isthisstockgood/templates/searchbox.html
+++ b/isthisstockgood/templates/searchbox.html
@@ -1,5 +1,5 @@
 <div class="container pt-4" "id="searchbox">
-  <form id="searchboxform" action="/search" method="post">
+  <form id="searchboxform" action="{{ url_for('search') }}" method="post">
     <div class="form-group row justify-content-center">
       <div class="col-md-3 nopadding">
         <input
